[project]
name = "cleanowners"
version = "2.0.0"
description = "GitHub Action that cleans up CODEOWNERS files by removing users who are no longer part of the organization."
requires-python = ">=3.11"
dependencies = [
    "github3-py==4.0.1",
    "python-dotenv==1.2.2",
    "requests==2.32.5",
]

[dependency-groups]
dev = [
    "black==26.3.1",
    "flake8==7.3.0",
    "isort==7.0.0",
    "mypy==1.19.1",
    "mypy-extensions==1.1.0",
    "pylint==4.0.5",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "types-requests==2.32.4.20260107",
]
